Removed new Long and used Long.valueOf as the constructor is being depricated